@@ -457,7 +457,7 @@ data:extend({
         max_health = 10000,
         selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
         collision_box = {{-0.4, -0.4}, {0.4, 0.4}},
-		collision_mask = {"object-layer"},
+		collision_mask = {"layer-15"},
         pictures = {
             wall_segment_horz,
             wall_segment_vert,
