@@ -36,7 +36,7 @@ data:extend {
     flow_to_energy_ratio = 0.3,
     heat_capacity = "1KJ",
     icon = "__Factorio-Tiberium__/graphics/icons/fluid/liquid-tiberium.png",
-    icon_size = 32,
+    icon_size = 64,
     max_temperature = 1000,
     name = "liquid-tiberium",
     order = "a[fluid]-c[crude-oil]",
@@ -60,7 +60,7 @@ data:extend {
     flow_to_energy_ratio = 0.3,
     heat_capacity = "1KJ",
     icon = "__Factorio-Tiberium__/graphics/icons/fluid/molten-tiberium.png",
-    icon_size = 32,
+    icon_size = 64,
     max_temperature = 1000,
     name = "molten-tiberium",
     order = "a[fluid]-c[crude-oil]",
@@ -82,7 +82,7 @@ data:extend {
     flow_to_energy_ratio = 0.2,
     heat_capacity = "1KJ",
     icon = "__Factorio-Tiberium__/graphics/icons/fluid/tiberium-sludge.png",
-    icon_size = 32,
+    icon_size = 64,
     max_temperature = 1000,
     name = "tiberium-sludge",
     order = "a[fluid]-d[crude-oil]",
@@ -104,7 +104,7 @@ data:extend {
     flow_to_energy_ratio = 0.5,
     heat_capacity = "1KJ",
     icon = "__Factorio-Tiberium__/graphics/icons/fluid/tiberium-waste.png",
-    icon_size = 32,
+    icon_size = 64,
     max_temperature = 1000,
     name = "tiberium-slurry",
     order = "a[fluid]-d[crude-oil]",
