@@ -306,7 +306,7 @@ local TotalCentOutput = OilPerCycle+StonePerCycle+CoalPerCycle+CopperPerCycle+Ir
 local DirectRecipeOutput = TotalCentOutput*0.8*RecipeMult --Must be a multiple of 4, so that DirectUraniumOutput is a whole number.
 local DirectOilOutput = DirectRecipeOutput*(OilPerCycle/IronPerCycle)
 local DirectUraniumOutput = DirectRecipeOutput/4
-local CreditEfficiency = 0.75 --How much of the ore should be converted into tiberium when used.
+local CreditEfficiency = 0.75 --How much of the ore value should be converted into tiberium when used.
 local OrePerCredit = settings.startup["tiberium-growth"].value
 local CreditCost = (OrePerCredit/DirectRecipeOutput)*(MoltenPerCycle/SlurrytoMolten*OretoSlurry)/CreditEfficiency*RecipeMult
 local CreditTime = 60*RecipeMult
